@@ -1,7 +1,7 @@
 github_url = "https://github.com/pylint-dev/astroid"
 
 [version]
-current = "3.3.9"
+current = "3.3.10"
 regex = '''
 ^(?P<major>0|[1-9]\d*)
 \.
